# point-registration-with-relaxation

./: CMakeLists.txt  Dockerfile  Dockerfile.apponly  Dockerfile.nvidia  README.md  launch-docker-nvidia.sh  launch-docker.sh
docker/: Dockerfile  Dockerfile.apponly  Dockerfile.nvidia  build-docker.sh  launch-docker.sh  run-docker.sh
include/: register.hpp
include/correspondences/: correspondences-sdp.hpp  correspondences.hpp
include/registration/: registration.hpp
scripts/: launch-docker-nvidia.sh  make-test-data.py  wrapper-test-mincorr.py  wrapper-test.py
src/: correspondences-sdp.cpp  correspondences.cpp  python-wrapper.cpp  python_wrapper.cpp  register.cpp  registration.cpp
test/: data.json
tests/: correspondences-unit.cpp  register-unit.cpp  registration-unit.cpp  sdp-unit.cpp  transform-unit.cpp
